--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -6,6 +6,14 @@
 	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 	position: fixed;
 	display: flex;
+
+	@media screen and (max-width: 1600px) {
+		height: 80px;
+	}
+
+	@media screen and (max-width: 769px){
+		height: 60px;
+	}
 }
 
 .title {
@@ -16,6 +24,16 @@
 	margin: 0 auto;
 	line-height: 100px;
 	color: white;
+	@media screen and (max-width: 1600px) {
+		font-size: 32px;
+		line-height: 80px;
+	}
+
+	@media screen and (max-width: 769px) {
+		font-size: 24px;
+		line-height: 60px;
+	}
+
 }
 
 .info {
@@ -25,6 +43,13 @@
 	margin: auto 30px;
 	float: right;
 	text-decoration: none;
+	@media screen and (max-width: 1600px){
+		font-size: 20px;
+	}
+	@media screen and (max-width: 769px){
+		font-size: 14px;
+		margin: auto 10px;
+	}
 }
 
 .info:hover {
