--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,10 @@
     padding: 0;
     background-color: $main-color;
     font: {
-        size: 32px;
+        size: 20px;
         family: "SF Pro Display";
     }
     color: white;
+    list-style: none;
+    text-decoration: none;
 }
