--- a/src/components/chooseWidget/chooseWidget.module.scss
+++ b/src/components/chooseWidget/chooseWidget.module.scss
@@ -1,24 +1,19 @@
-@import "../../_vars";
-
-.background {
-    background: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+.blockWidgets {
+    display: flex;
+    justify-content: space-around;
 }
 
-.modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: $main-color;
-    width: 60%;
-    height: 70%;
-    border-radius: 50px;
-    padding: 50px;
+.title {
+    font-size: 32px;
+    @media screen and (max-width: 1600px) {
+        font-size: 28px;
+    }
+
+    @media screen and (max-width: 1200px) {
+        font-size: 24px;
+    }
+
+    @media screen and (max-width: 769px) {
+        font-size: 12px;
+    }
 }
