--- a/src/components/column/column.module.scss
+++ b/src/components/column/column.module.scss
@@ -1,6 +1,12 @@
 .title {
     text-align: center;
     font-size: 32px;
+    @media screen and (max-width: 1600px) {
+        font-size: 24px;
+    }
+    @media screen and (max-width: 769px) {
+        font-size: 14px;
+    }
 }
 
 .btn {
