--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -14,7 +14,7 @@
     }
 
     @media screen and (max-width: 769px) {
-        height: 60px;
+        height: 40px;
     }
 }
 
@@ -32,27 +32,26 @@
     }
 
     @media screen and (max-width: 769px) {
-        font-size: 24px;
-        line-height: 60px;
+        font-size: 18px;
+        line-height: 40px;
     }
 }
 
 .info {
     font: {
-        size: 24px;
+        size: 20px;
     }
+    color: white;
     margin: auto 30px;
     float: right;
     text-decoration: none;
-    @media screen and (max-width: 1600px) {
-        font-size: 20px;
-    }
     @media screen and (max-width: 769px) {
-        font-size: 14px;
+        font-size: 12px;
         margin: auto 10px;
     }
 }
 
 .info:hover {
     transform: scale(1.05);
+    color: #4d71f1;
 }
