--- a/src/components/openWidget/openWidget.module.scss
+++ b/src/components/openWidget/openWidget.module.scss
@@ -1,24 +1,31 @@
-@import "../../_vars";
+.title {
+    font-size: 32px;
 
-.background {
-    background: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    @media screen and (max-width: 1200px) {
+        font-size: 24px;
+    }
+
+    @media screen and (max-width: 769px) {
+        font-size: 14px;
+    }
 }
 
-.modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: $main-color;
-    width: 50%;
-    height: 50%;
-    border-radius: 50px;
-    padding: 70px;
+.btn {
+    margin: 20px;
+    @media screen and (max-width: 769px) {
+        margin: 3px;
+    }
+}
+
+.content {
+    white-space: pre-wrap;
+    margin-bottom: 10px;
+    font-size: 20px;
+    @media screen and (max-width: 1200px) {
+        font-size: 14px;
+    }
+
+    @media screen and (max-width: 769px) {
+        font-size: 10px;
+    }
 }
