--- a/src/components/openWidget/openWidget.module.scss
+++ b/src/components/openWidget/openWidget.module.scss
@@ -11,7 +11,10 @@
 }
 
 .btn {
-    margin: 20px;
+    margin-top: 140px;
+    @media screen and (max-width: 1600px) {
+        margin-top: 80px;
+    }
     @media screen and (max-width: 769px) {
         margin: 3px;
     }
